Fix the issue in ios to align the image vertically.

--- a/src/imagelightbox.css
+++ b/src/imagelightbox.css
@@ -216,7 +216,7 @@
     .imagelightbox-arrow {
         width: 2.5em; /* 40 */
         height: 3.75em; /* 60 */
-        margin-top: -2.75em; /* 30 */
+        margin-top: -1.875em; /* 30 */
     }
     .imagelightbox-arrow-left {
         left: 1.25em; /* 20 */
